--- a/MagnoMouse.css
+++ b/MagnoMouse.css
@@ -4,26 +4,61 @@ html{
 }
 
 h1, h2,h3,h4, h5,h6{
-    color: #a82230;
+    color: #003049;
     margin : 20px auto;
 }
 
-body{
-    border : 4px solid black;
-    border-radius: 15px;
-}
-
-main{
+#init{
+    height: 95vh;
+    width: 80%;
+    margin-left: 10%;
     display:flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+}
+
+#sbmt{
+    font-size: 16px;
+    font-weight: 500;
+    transition: ease-in-out 400ms;
+    border:none;
+}
+
+#sbmt:hover{
+    transform: scale(1.03);
+    /* translateY : 10px; */
+    background-color: #669bbc;
+    color:#003049;
+}
+
+form{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height:40vh;
+    width:60%;
+    margin-top: 15vh;
+    background-color: #FAFAFF;
+    border: 2px solid black;
+    border-radius: 15px;
+}
+body{
+    text-align: center;
+    /* display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; */
+    border : 4px solid #003049;
+    border-radius: 15px;
 }
 
 .temp{
     text-align:center;
     display:inline-block;
 }
+
 
 div{
     display : inline-block;
