--- a/MagnoMouse.css
+++ b/MagnoMouse.css
@@ -90,3 +90,28 @@ button{
 #foot button{
     width : 200px;
 }
+
+.container{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+.seven{
+    width: 70%;
+    display:flex;
+    justify-content: center;
+}
+.three{
+    width:30%;
+    background-color: #FAFAFF;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height:40vh;
+    /* width:60%; */
+    margin-top: 15vh;
+    border: 2px solid black;
+    border-radius: 15px;
+}
