--- a/MagnoMouse.css
+++ b/MagnoMouse.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+    margin:0;
 	line-height: 1.3;
 }
 ol, ul {
@@ -273,3 +274,50 @@ button{
     height: 5.6vh;
     /* background-color: blue; */
 }
+
+#cover{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 0;
+    top:0px;
+    left:0px;
+    background-color: rgba(0,0,0,0.8);
+}
+
+#card{
+    background-color: white;
+    width:40%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 3px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 3px black;
+    z-index: 10;
+}
+
+#card button{
+    width:auto;
+    font-size: 1.8em;
+    border: 3px solid #003049;
+    transition: 400ms;
+}
+
+#card button:hover{
+    background-color: #FAFAFF;
+    color:#003049;
+    transform: translateY(-5px);
+    box-shadow: 0 8px 5px #003049;
+}
+
+#gameStatus{
+    font-size: 2em;
+    margin: 10px;
+}
+
